adding small changes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -102,6 +102,7 @@
         
         <form action="/add" method="post">
             <input type="text" id="txtInput" name="task" placeholder="Add a new task" required pattern=".*\S.*">
+            <input type="email"  id="email" name="mail"  placeholder="enter your email">
             <input type="datetime-local" id="taskTime" name="time" required>
             <button type="submit">Add Task</button>
         </form>
